WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245490
Regression(242214) ViewSnapshotStore's snapshots are no longer volatile
https://bugs.webkit.org/show_bug.cgi?id=245490
Summary
Regression(242214) ViewSnapshotStore's snapshots are no longer volatile
Patrick Angle
Reported
2022-09-21 10:34:44 PDT
<
rdar://99410517
>
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2022-09-21 10:42:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4573
EWS
Comment 2
2022-09-21 12:18:15 PDT
Committed
254734@main
(ba43b95d6427): <
https://commits.webkit.org/254734@main
> Reviewed commits have been landed. Closing PR #4573 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug