Cherry-pick ba43b95d6427. rdar://problem/99410517

Regression(242214) ViewSnapshotStore's snapshots are no longer volatile
    https://bugs.webkit.org/show_bug.cgi?id=245490

    Reviewed by Tim Horton.

    Bug 242214 stopped marking view snapshots as volatile by default in order for WebDriver to guarantee their lifetime
    until it is able to convert it to base64. This causes the ViewSnapshotStore to grow to it's limit of 400mb, instead of
    being able to have snapshots disposed of sooner. The ViewSnapshotStore should explicitly mark the snapshots it takes as
    volatile to satisfy that requirement.

    * Source/WebKit/UIProcess/ViewSnapshotStore.cpp:
    (WebKit::ViewSnapshotStore::recordSnapshot):

    Canonical link: https://commits.webkit.org/254734@main

Canonical link: https://commits.webkit.org/252432.470@safari-7614-branch